--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ img{
     width: 100%; /* adjust this and the padding-top to change how big it is*/
     height: 0;
     padding-top: 57%; /* padding top is in reltation to the width of parent, it preserves aspect ratio*/
-    margin: 0 auto; /*this would center your video in the section container*/
+    /* margin: 0 auto; */ /*this would center your video in the section container*/
 }
 .responsive-video iframe{
     position: absolute;
